--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="wrapper">
       <div id="header">
         <h1>LOST LANDS</h1>
-        <h3>Web Browser ADVENTURE Platform Game</h3>
+        <h3>Web Browser ADVENTURE Platform Game Babe</h3>
       </div>
 
       <div id="content">
