--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div id="wrapper">
     <div id="header">
-        <h1>LOST LANDS</h1>
+        <h1>LOST LANsdsDS</h1>
       <h3>Web Browser ADVENTURE Platform Game</h3>
     </div>    
 
