--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           themselves..
         </p>
         <p>
-          There is no old people in this village because when they become 30 years old they leave their family and go to
+          There is no old peoeeeeeeeeple in this village because when they become 30 years old they leave their family and go to
           the journey. And new geneneration stay, protect their family and work for village until they become 30 years
           old.Before our hero goes to the journey, his father and brother went to the journey and didn’t come back like
           Others!
